--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,7 @@ html {
   background-color: black;
   color: rgb(255, 255, 255);
   padding: 2px;
-  border: 1px solid rgb(111, 1, 255);
+  border: 2px solid rgb(146, 0, 146);
   border-radius: 7px;
   text-align: center;
   z-index: 10;
@@ -87,9 +87,6 @@ html {
   transition: opacity 0.2s;
 }
 
-.Criticalp {
-  margin-bottom: 15px;
-}
 .LastThrowp {
   margin-top: 15px;
 }
@@ -124,11 +121,24 @@ html {
   }
 }
 
+.ActivCritic {
+  display: flex;
+  input {
+    margin-top: -7px;
+    width: 15px;
+  }
+  p {
+    margin-top: 10px;
+    margin-bottom: 15px;
+    margin-left: 5px;
+  }
+}
+
 .ThrowButton {
   background-color: black;
   color: rgb(255, 255, 255);
   padding: 2px 10px;
-  border: 1px solid rgb(111, 1, 255);
+  border: 2px solid rgb(146, 0, 146);
   border-radius: 7px;
   text-align: center;
   font-size: 17px;
@@ -186,6 +196,12 @@ html {
 .Result {
   position: relative;
 }
+.GlobalHelp {
+  margin-top: 15px;
+}
+.GlobalHelpImg {
+  width: 10px;
+}
 
 .GlobalBack {
   margin-top: 100px;
@@ -193,12 +209,16 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px 100px;
-  margin-left: 25px;
-  margin-right: 25px;
+  padding: 25px 100px;
   width: 200px;
-  padding: 25px;
   border-radius: 15px;
+  p {
+    margin-top: 15px;
+  }
+}
+.BuyMeCoffe {
+  margin-top: 25px;
+  width: 400px;
 }
 
 @media (max-width: 500px) {
