--- a/src/App.scss
+++ b/src/App.scss
@@ -123,7 +123,10 @@ html {
 .ActivCritic {
   display: flex;
   input {
+    margin: 0;
+    transform: scale(1);
     margin-top: -7px;
+
     width: 15px;
   }
   p {
