--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   font-family: "Indie Flower", cursive;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
 }
 html {
@@ -31,7 +31,7 @@ html {
   background-color: rgba(255, 255, 255, 0.322);
   padding: 25px;
   border-radius: 15px;
-  margin-top: -80px;
+  margin-top: -90px;
 }
 
 .All {
@@ -44,17 +44,13 @@ html {
 }
 
 .inputChooseDice {
-  appearance: none;
-  border: 0;
-  outline: 0;
-  font: inherit;
-
   background-color: black;
   color: rgb(255, 255, 255);
-  padding: 2px;
+  padding: 2px 10px;
   border: 2px solid rgb(146, 0, 146);
   border-radius: 7px;
   text-align: center;
+  font-size: 17px;
   z-index: 10;
   &:hover {
     background-color: rgba(0, 0, 0, 0.342);
@@ -110,14 +106,36 @@ html {
     justify-content: center;
     align-items: center;
     font-size: 200px;
-    margin-top: 11px;
+
     width: 300px;
-    color: rgb(146, 0, 146);
+    backdrop-filter: blur(1px);
   }
   img {
     position: absolute;
     width: 300px;
   }
+}
+
+.StyleDice {
+  background-color: black;
+  color: rgb(255, 255, 255);
+  margin-top: 15px;
+  padding: 1px 5px;
+  border: 2px solid rgb(146, 0, 146);
+  border-radius: 7px;
+  text-align: center;
+  font-size: 12px;
+  z-index: 10;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.342);
+  }
+}
+
+.DiceColor1 {
+  color: rgb(146, 0, 146);
+}
+.DiceColor2 {
+  color: rgb(0, 151, 33);
 }
 
 .ActivCritic {
